force-app/main/default/objects/Tool_Used__c/Tool_Used__c.object-meta.xml
<CustomObject>
    <label>Tool Used</label>
    <nameField>
        <displayFormat>TU-{000000}</displayFormat>
        <label>Tool Used Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tool Used</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>