force-app/main/default/objects/Tool_Used__c/fields/DD_Calc_Times__c.field-meta.xml
<CustomField>
    <fullName>DD_Calc_Times__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DD Calc Times</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>