force-app/main/default/objects/Tool_Used__c/fields/Users__c.field-meta.xml
<CustomField>
    <fullName>Users__c</fullName>
    <label>Users</label>
    <referenceTo>Users_of_Tool__c</referenceTo>
    <relationshipLabel>Tool Used</relationshipLabel>
    <relationshipName>Tool_Used</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>